Deps updates  (#170)
* #169 - Updated Dockerfile + docs

* #169 - Updated misc maven deps - no problems

* #169 - Updated maven build to use Boot 3.3.5

* #169 - Updated Gradle build deps

* #169 - Uplift Snakeyaml to v2.2

* #169 - Lombok + Intellisense cleanup

* #169 - Added Lombok to domain objects

* #169 - Added Lombok + cleanup

* #169 - Repo cleanup

* #169 - Use parametrised log statements

* #169 - Use parameterised log statements

* #169 - Use parameterised log statements

* chore: #169 - Use Lombok + parameterised logging

* Some Intellisense cleanup too.

* chore: #169 - Spring 6.1 RequestParam fix

* Since Spring 6.1, RequestParam names are no longer "auto discovered" via Spring magic... you need to specify them or use compiler flags. See: https://github.com/spring-projects/spring-framework/wiki/Spring-Framework-6.1-Release-Notes#parameter-name-retention
* Cleanup of builds files too.

* docs: #169 - Added Code of Conduct & adopt semantic commits

* chore: #169 - Added missing javadoc

* docs: Commit example tweak

* Follow the GitHub convention of using putting the ticket number at end of commit msg.

* docs: Commit example tweak (#169)

* Follow the GitHub convention of using putting the ticket number at end of commit msg.

* chore: Use parameterised logging (#169)

* test: Replace deprecated test class (#169)

* chore: Use parameterised logging (#169)

* chore: Use Lombok + parameterise logging (#169)

* Some misc test code cleanup too.

* chore: Fix Sonar URL whines (#169)

* test: Fix Sonar test whines (#169)

* test: Fix more Sonar test whines (#169)

* test: Fix last Sonar test whines (#169)

* test: Fix deprecated mock usage (#169)

---------

Co-authored-by: gazbert <gazbert@gazbert.com>